LPS-158064 Avoid vertical bar overlaps the control menu

--- a/modules/apps/knowledge-base/knowledge-base-web/src/main/resources/META-INF/resources/admin/css/_admin.scss
+++ b/modules/apps/knowledge-base/knowledge-base-web/src/main/resources/META-INF/resources/admin/css/_admin.scss
@@ -4,6 +4,9 @@ $controlMenuHeight: 56px;
 
 .knowledge-base-portlet-admin {
 	.knowledge-base-vertical-bar {
+		position: relative;
+		z-index: 1;
+
 		> div {
 			height: 100%;
 			min-height: calc(100vh - #{$controlMenuHeight});
